--- a/javascript/proyecto-angular/angular.json
+++ b/javascript/proyecto-angular/angular.json
@@ -20,8 +20,8 @@
                         "tsConfig": "tsconfig.app.json",
                         "aot": false,
                         "assets": ["src/favicon.ico", "src/assets"],
-                        "styles": ["src/assets/css/styles.css"],
-                        "scripts": []
+                        "styles": ["src/assets/css/styles.css", "src/assets/js/bxslider/dist/jquery.bxslider.min.css"],
+                        "scripts": ["node_modules/jquery/dist/jquery.min.js", "src/assets/js/bxslider/dist/jquery.bxslider.min.js"]
                     },
                     "configurations": {
                         "production": {
